# Informatica-Restaurant-Website

./: MealScraper.py  README.md  build.ps1
cppbackend/: make.sh
linux-cpp-backend/: CMakeLists.txt  Makefile  meals.db  schema.sql
linux/cppbackend/: Makefile  main.cpp
linux/react-frontend/src/: App.jsx
react-frontend/: package-lock.json  package.json
react-frontend/src/: App.css  App.jsx  index.css
react-frontend/src/components/: DishCard.jsx  HoverText.jsx  MenuView.jsx  OrderView.jsx
windows-cpp-backend/: CMakeLists.txt  main.cpp
windows-cpp-backend/Crow-HTTP/lib/cmake/Crow/: CrowTargets.cmake
windows/cppbackend/: schema.sql
windows/react-frontend/: index.html
windows/react-frontend/src/: main.jsx
windows/react-frontend/src/components/: Hero.jsx  MenuGallery.jsx
